Fix for bug #22271: data casting may affect data stored in the next column(s?)

Using wrong filling value may cause unneeded extra bit rewriting.

Fix: use proper value to fill uneven bits.